--- a/css/style.css
+++ b/css/style.css
@@ -16,19 +16,111 @@ html {
 
 img {
   width: 100%;
-  height: auto;
+  height: 100%;
 }
+
 h1 {
   font-size: 3rem;
   text-align: center;
   margin: 2rem;
+  background-position: center;
+  font-size: 100px;
 }
-@media screen and (min-width: 768px) {
-  . img {
-    max-width: 225px;
+
+.fig {
+  text-align: center;
+}
+
+.mayorin {
+  text-align: center;
+  font-size: 20px;
+  background-position: center;
+}
+.parrafo {
+  text-align: center;
+  background-position: center;
+  font-size: 40px;
+}
+
+.colegas {
+  text-align: center;
+  font-size: 60px;
+}
+
+.compas {
+  display: flex;
+  flex-wrap: wrap;
+  font-size: 20px;
+  justify-content: space-between;
+}
+.caja {
+  background-color: lightblue;
+  padding: 20px;
+  text-align: center;
+  border: 2px solid var(--color-negro);
+  border-radius: 15%;
+  box-sizing: border-box;
+  margin: 20px;
+  display: inline-block;
+  width: 25%;
+}
+
+.fotter {
+  width: 100%;
+  height: 100px;
+  background-color: var(--color-secundario);
+  margin-top: 120px;
+  padding-top: 50px;
+  padding-left: 50%;
+  font-size: 15px;
+}
+
+.titulo {
+  background-color: aqua;
+}
+.intro {
+  text-align: center;
+  background-position: center;
+  font-size: 40px;
+}
+
+.img2 {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+}
+@media screen and (max-width: 1024px) {
+  .img {
+    max-width: 50%;
     padding: 6rem;
+    .compas {
+      background-color: #33ff37;
+    }
+    .caja {
+      background-color: yellow;
+    }
   }
-@media screen and (min-width: 1200px) {
+}
+@media screen and (max-width: 768) {
   body {
-    max-width: 1024px;
-    margin: auto;}
+    max-width: 100vw;
+    margin: auto;
+    .compas {
+      background-color: aqua;
+      .caja {
+        background-color: aliceblue;
+      }
+    }
+  }
+}
+@media screen and (max-width: 375) {
+  .compas {
+    background-color: yellow;
+    .caja {
+      background-color: red;
+    }
+  }
+  .principal {
+    font-size: 40px;
+  }
+}
